--- a/pacman.html
+++ b/pacman.html
@@ -11,13 +11,15 @@
 <body>
     <div id="world"></div>
 
-    <div id="pacman" style="top: 20px; left: 20px;"></div>
+    <div id="pacman"></div>
+
+    <div id="score"></div>
 
     <script>
     
     var world = [
         [2,2,2,2,2,2,2,2,2,2,2,2],
-        [2,1,1,1,1,1,1,1,1,1,1,2],
+        [2,3,1,1,1,1,1,1,1,1,1,2],
         [2,1,1,1,1,1,1,1,1,1,1,2],
         [2,1,1,1,1,1,1,1,1,1,1,2],
         [2,1,1,1,1,1,1,1,1,1,1,2],
@@ -28,6 +30,14 @@
         [2,1,1,1,1,1,1,1,1,1,1,2],
         [2,2,2,2,2,2,2,2,2,2,2,2]
     ];
+
+    var score = 0;
+
+    var pacman = {
+        x: 1, 
+        y: 1
+    };
+
 
     function displayWorld() {
         var output = '';
@@ -45,13 +55,44 @@
             }
             output += "\n</div>";
         }
-        console.log(output);
+        // console.log(output);
         document.getElementById('world').innerHTML = output;
     }
 
+    function displayPacman() {
+        document.getElementById('pacman').style.top = pacman.y * 20 + "px";
+        document.getElementById('pacman').style.left = pacman.x * 20 + "px";
+    }
+
+    function displayScore() {
+        document.getElementById('score').innerHTML = "<h3>" + score + "</h3>";
+    }
+
     displayWorld();
+    displayPacman();
+    displayScore();
 
 
+    document.onkeydown = function(e) {
+        if (e.keyCode === 40 && (world[pacman.y + 1][pacman.x] === 1 || world[pacman.y + 1][pacman.x] === 3)) {
+            pacman.y++;
+        } else if (e.keyCode === 37 && (world[pacman.y][pacman.x - 1] === 1 || world[pacman.y][pacman.x - 1] === 3)) {
+            pacman.x--;
+        } else if (e.keyCode === 39 && (world[pacman.y][pacman.x + 1] === 1 || world[pacman.y][pacman.x + 1] === 3))  {
+            pacman.x++;
+        } else if (e.keyCode === 38 && (world[pacman.y - 1][pacman.x] === 1 || world[pacman.y - 1][pacman.x] === 3))  {
+            pacman.y--;
+        }
+
+        if (world[pacman.y][pacman.x] === 1) {
+            world[pacman.y][pacman.x] = 3;
+            score += 10;
+            displayWorld();
+            displayScore();
+        }
+        console.log(pacman);
+        displayPacman();
+    };
 
     </script>
     
